CSS styled added to fix overflow issue hidden

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,7 +7,6 @@
   text-decoration: none;
   color: inherit;
   background-color: var(--color-tan);
-  overflow-x: hidden;
 }
 
 /* Creating Horizontal line (fullscreen) */
